Add Django Util With Decorator

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ deps = {[testenv]basedeps}
        django
 setenv =
     pypy: with_gmp=no
+    DJANGO_SETTINGS_MODULE=tests.test_django_settings
 commands = nosetests --ignore-files=test_appengine\.py {posargs}
 
 [coverbase]
